Details
-
Bug
-
Resolution: Done
-
P2: Important
-
6.0.0
-
Kubuntu 20.04
Qt 6.0 installed with Qt Maintainance tool
Open Source license
-
9b407b68d1fc0abe08091aa7ca007fbf0f03fb89 (qt/qtdeclarative/dev) adece5d3bb5940d7bb9f7afe49ed4ce10ee60c1b (qt/qtdeclarative/6.0)
Description
When executing qmllint with a qmltypes file, it will eat all the memory it can and killed by the kernel.
minimum case to reproduce issue:
$ touch test.qmltypes $ touch test.qml $ qmllint test.qml